Fixed all the bugs of JS-Chat demo app on 07-Jun-23

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,11 @@
 <body class="mat-typography">
   <app-root></app-root>
   <!-- <script src="./assets/js/vdotok-messaging.js"></script> commented this on 23-May-23 and add updated sdk in which notification implementation is  199lineno. commented-->
-  <script src="./assets/js/updated-vdotok-messaging.js"></script>
+  <!-- <script src="./assets/js/updated-vdotok-messaging.js"></script> -->
+  <script src="./assets/js/latestupdated-vdotok-messaging.js"></script> 
+  <!-- added on 06-Jun-23 to resolve cb is not a func -->
+
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
